addressing some sonar complaints